<resources>
    <string name="app_name">Pustak Ni Parab</string>
    <string name="defaultArea">Isanpur</string>
    <string name="exportFileName">PustakParabExportedNames.csv</string>
    <!--    <string name="defaultAndroidClientId">172709641516-nansppodobu60ess8uvfcuo4rn6ajh4m.apps.googleusercontent.com</string>-->
    <string name="defaultAndroidClientId">172709641516-rdv19n8cbqpb1u4p3d0tfhp3fqht9dbk.apps.googleusercontent.com</string>
    <string name="basePoint">BasePoint</string>
    <string name="testData">TestData</string>
    <string name="verifiedUsers">VerifiedUsers</string>
    <string name="newIssue">Add New Issue</string>
    <string name="allIssues">View All Issues</string>
    <string name="issues">Issues</string>
    <string name="names">Names</string>
    <string name="returns">Returns</string>
    <string name="user">User</string>
    <string name="drawerOpen">Open</string>
    <string name="drawerClose">Close</string>
    <string name="addPerson">Add New Person</string>
    <string name="viewPerson">View Person Details</string>
    <string name="editPerson">Edit Person Details</string>
    <string name="allNames">View All Names</string>
    <string name="searchName">Search Name</string>
    <string name="editName">Edit Name</string>
    <string name="delName">Delete Name</string>
    <string name="totalRecords">currentTotalIssuesRecorded</string>
    <string name="totalNames">currentTotalNamesRecorded</string>
    <string name="noRecordsFound">No Records Found.</string>
    <string name="notReturned">NO</string>
    <string name="hasReturned">YES</string>
    <string name="firstNameItem">Select Name ID</string>
    <string name="firstLangItem">Select Language</string>
    <string name="someError">Some Error Occurred. Please try again.</string>
    <string name="addNewBooks">Add New Books</string>
    <string name="newBooks">NewBooks</string>
    <string name="totalNewBooks">currentTotalNewBooksRecorded</string>
    <string name="userDetails">User Details</string>
    <string name="userSignOut">Sign Out</string>
    <string name="indianStandardTime">IST</string>
    <string name="dateFormat">dd MMM yyyy</string>
    <string name="developerMode">Developer Mode</string>
    <string name="sharedPreferencesName">SharedPustakNiParabPreferences</string>
    <string name="sharedDeveloperMode">Current_Developer_Mode</string>
    <string name="isDeveloperKey">isDeveloper</string>
    <string name="timeStamps">TimeStamps</string>
    <string name="imagesCreatedTimeStamp">imagesCreatedTimeStamp</string>
    <string name="dataChangedTimeStamp">dataChangedTimeStamp</string>
    <string-array name="languages">
        <item>Gujarati</item>
        <item>English</item>
        <item>Hindi</item>
        <item>Other</item>
    </string-array>
    <string-array name="serials">
        <item>No Item</item>
    </string-array>
</resources>
